<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_title1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/view_title2"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/view_title3"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="358dp"
                android:layout_height="71dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="47dp"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title3" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title4" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="90dp"
                android:layout_height="26dp"
                android:text="@string/view_title4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="233dp"
                android:layout_height="23dp"
                android:layout_marginStart="52dp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>